tests/tokenizer/invalid_character.expected
Token { tt: LParen, span: @0:0-1 }: "("
<string>:1:3: error: unexpected character '@'
( @ )
  ^
